--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1084,18 +1084,18 @@ zksync_era:
       method: null
       comment: "blob producer (first used 2025-05-12, last used 2025-07-28)"
 
-one_world: # 2741
-  name: "One World" # chain id: 9075
+one_world:
+  name: "One World" # chain_address: 0x6e96d1172a6593d5027af3c2664c5112ca75f2b9
   l1:
-    - from_address: "0x415ed64d42bc0c37aeaaef79aa767d963ef38807"
+    - from_address: "0x14f19299476664665eda17dbb7da7e62e3253aa8"
       to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-09-10)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-12-02)"
   beacon:
-    - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
+    - from_address: "0x7d95f0b9d3383d58e39a75a67760aa2153d355a2"
       to_address: null
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-09-10)"
+      comment: "commitBatchesSharedBridge (first used 2025-12-02)"
 
 sophon:
   name: "Sophon" # chain_address: 0x05eDE6aD1f39B7A16C949d5C33a0658c9C7241e3
