--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1091,6 +1091,10 @@ one_world:
       to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
       method: null
       comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-12-02)"
+    - from_address: "0x7d95f0b9d3383d58e39a75a67760aa2153d355a2"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-12-02)"
   beacon:
     - from_address: "0x7d95f0b9d3383d58e39a75a67760aa2153d355a2"
       to_address: null
@@ -1156,6 +1160,10 @@ abstract:
       to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
       method: null
       comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-12-02)"
+    - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-12-02)"
   beacon:
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: null
@@ -1204,16 +1212,16 @@ grvt:
       comment: "commitBatchesSharedBridge (first used 2025-03-24)"
 
 cronos:
-  name: "Cronos zkEVM"
+  name: "Cronos zkEVM" # chain_address: 0x7b2DA4e77BAE0e0d23c53C3BE6650497d0576CFc
   l1:
     - from_address: "0x7fea26a181a792b5107ee0a31e434f5dbcbbe0b7"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-07-27, last used ...)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-07-27, last used ?)"
     - from_address: "0xb9d48daf26f3cbe01a959f09f98e8a2ec8204122"
       to_address: "0x5D8ba173Dc6C3c90C8f7C04C9288BeF5FDbAd06E"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2024-07-27, last used ...)"
+      comment: "commitBatchesSharedBridge (first used 2024-07-27, last used ?)"
     - from_address: "0xb9d48daf26f3cbe01a959f09f98e8a2ec8204122"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
@@ -1221,7 +1229,15 @@ cronos:
     - from_address: "0x7fea26a181a792b5107ee0a31e434f5dbcbbe0b7"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-03-26)"
+      comment: "commitBatchesSharedBridge (first used 2025-03-26, last used ?)"
+    - from_address: "0xb9d48daf26f3cbe01a959f09f98e8a2ec8204122"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-12-02)"
+    - from_address: "0x7fea26a181a792b5107ee0a31e434f5dbcbbe0b7"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2025-12-02)"
 
 treasure:
   name: "Treasure"
