--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1012,7 +1012,7 @@ starknet:
       comment: "blob producer"
 
 zksync_era:
-  name: "ZKsync Era" # chain_address: 0x2cf3bD6a9056b39999F3883955E183F655345063
+  name: "ZKsync Era" # chain_address: 0x32400084C286CF3E17e7B677ea9583e60a000324 (or 0x6e96d1172a6593d5027af3c2664c5112ca75f2b9)
   l1:
     - from_address: null
       to_address: "0x3dB52cE065f728011Ac6732222270b3F2360d919"
@@ -1074,19 +1074,6 @@ zksync_era:
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
       comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-05-12, last used 2025-07-28)"
-  beacon:
-    - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
-      to_address: null
-      method: null
-      comment: "blob producer (first used 2024-06-06, last used 2025-05-12)"
-    - from_address: "0xE1D8d4C8656949764c2c9Fa9faB2C15d3F42e6C2"
-      to_address: null
-      method: null
-      comment: "blob producer (first used 2025-05-12, last used 2025-07-28)"
-
-one_world:
-  name: "One World" # chain_address: 0x6e96d1172a6593d5027af3c2664c5112ca75f2b9
-  l1:
     - from_address: "0x14f19299476664665eda17dbb7da7e62e3253aa8"
       to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
       method: null
@@ -1096,10 +1083,18 @@ one_world:
       method: null
       comment: "commitBatchesSharedBridge (first used 2025-12-02)"
   beacon:
+    - from_address: "0x0d3250c3d5facb74ac15834096397a3ef790ec99"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2024-06-06, last used 2025-05-12)"
+    - from_address: "0xE1D8d4C8656949764c2c9Fa9faB2C15d3F42e6C2"
+      to_address: null
+      method: null
+      comment: "blob producer (first used 2025-05-12, last used 2025-07-28)"
     - from_address: "0x7d95f0b9d3383d58e39a75a67760aa2153d355a2"
       to_address: null
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-12-02)"
+      comment: "commitBatchesSharedBridge (first used 2025-10-21)"
 
 sophon:
   name: "Sophon" # chain_address: 0x05eDE6aD1f39B7A16C949d5C33a0658c9C7241e3
