--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -2008,6 +2008,8 @@ megaeth:
       to_address: "0x00656C604FC470e6a566A695B74455e18a6D75D3"
       method: null
       comment: "EigenDA certificate (first used 2025-11-13)"
+  eigenda:
+    - namespace: "0x42b5ea5238752cc6f70d93fa4249feae480a0b39"
 
 mantle_testnet:
   name: "Mantle Testnet"
